ios/chrome/browser/ui/content_suggestions/content_suggestions_view_controller.h
@@ -64,6 +64,8 @@
 // Returns the number of sections containing suggestions displayed above this
 // |section|.
 - (NSInteger)numberOfSectionsAbove:(NSInteger)section;
+// Updates the constraints of the collection.
+- (void)updateConstraints;
 
 // Returns the accessibility identifier of the collection.
 + (NSString*)collectionAccessibilityIdentifier;
