ios/chrome/browser/ui/content_suggestions/content_suggestions_view_controller.mm
@@ -190,6 +190,20 @@ BOOL ShouldCellsBeFullWidth(UITraitCollection* collection) {
   return sectionsAbove;
 }
 
+- (void)updateConstraints {
+  [self.collectionUpdater
+      updateMostVisitedForSize:self.collectionView.bounds.size];
+  [self.headerCommandHandler
+      updateFakeOmniboxOnNewWidth:self.collectionView.bounds.size.width];
+  [self.collectionView reloadData];
+  if (ShouldCellsBeFullWidth(
+          [UIApplication sharedApplication].keyWindow.traitCollection)) {
+    self.styler.cellStyle = MDCCollectionViewCellStyleGrouped;
+  } else {
+    self.styler.cellStyle = MDCCollectionViewCellStyleCard;
+  }
+}
+
 + (NSString*)collectionAccessibilityIdentifier {
   return @"ContentSuggestionsCollectionIdentifier";
 }
@@ -239,17 +253,7 @@ BOOL ShouldCellsBeFullWidth(UITraitCollection* collection) {
   [super viewDidAppear:animated];
   // Resize the collection as it might have been rotated while not being
   // presented (e.g. rotation on stack view).
-  [self.collectionUpdater
-      updateMostVisitedForSize:self.collectionView.bounds.size];
-  [self.headerCommandHandler
-      updateFakeOmniboxOnNewWidth:self.collectionView.bounds.size.width];
-  [self.collectionView reloadData];
-  if (ShouldCellsBeFullWidth(
-          [UIApplication sharedApplication].keyWindow.traitCollection)) {
-    self.styler.cellStyle = MDCCollectionViewCellStyleGrouped;
-  } else {
-    self.styler.cellStyle = MDCCollectionViewCellStyleCard;
-  }
+  [self updateConstraints];
   // Update the shadow bar.
   [self.audience contentOffsetDidChange];
 }
